src/test/resources/semantic/accept/sameVariableNameAcrossFunctions.ul
void main() {
}

void foo() {
    int foo;
}

void bar() {
    int foo;
}
