src/test/resources/semantic/reject/elseStatementIntType.ul
void main() {
}

void foo() {
    int condition;

    if (condition + condition) {
    } else {
    }
}
